worked thru issues with monorepo, aws local dev, and clean up a bit

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -71,6 +71,9 @@
     "@types/node": "^8.5.1",
     "@types/supertest": "^2.0.4",
     "aws-auth-helper": "^1.0.0",
+    "dynamodb-local": "^0.0.31",
+    "eslint": "7",
+    "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
     "prettier": "^1.9.2",
