--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "api:deploy": "yarn workspace api deploy",
-    "api:serve": "yarn workspace api serve",
+    "api:serve": "yarn workspace api start",
     "api:build": "yarn workspace api build",
     "api:lint": "yarn workspace api deploy",
     "api:test": "yarn workspace api test",
@@ -36,14 +36,14 @@
     "eslint": "6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "4.0.6",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "husky": "^4.2.5",
+    "jest": "24.9.0",
     "lint-staged": "^10.2.13",
-    "prettier": "^2.0.5",
-    "jest": "24.9.0"
+    "prettier": "^2.0.5"
   },
   "prettier": {
     "singleQuote": true,
@@ -58,5 +58,12 @@
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
     "*.{ts,tsx,js,jsx,json,yml,yaml,md}": "prettier --write"
+  },
+  "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "inquirer": "^7.3.3",
+    "prop-types": "^15.7.2"
   }
 }
