--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "api:deploy": "yarn workspace api deploy",
-    "api:serve": "yarn workspace api start",
+    "api:dev": "yarn workspace api start",
+    "api:start": "yarn workspace api start",
     "api:build": "yarn workspace api build",
     "api:lint": "yarn workspace api deploy",
     "api:test": "yarn workspace api test",
@@ -43,7 +44,8 @@
     "husky": "^4.2.5",
     "jest": "24.9.0",
     "lint-staged": "^10.2.13",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "ts-node": "^9.1.1"
   },
   "prettier": {
     "singleQuote": true,
