updated modules for frontend pkg, it was preventing a build in pipeline due to module dep

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,51 +4,51 @@
   "version": "1.0.0",
   "homepage": "https://metabadges.io",
   "dependencies": {
-    "@babel/helper-call-delegate": "^7.10.1",
-    "@reach/dialog": "^0.2.8",
-    "@reach/tooltip": "^0.2.0",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.4",
-    "@types/react": "^16.9.22",
-    "@types/react-dom": "^16.9.5",
-    "@uniswap/sdk": "^1.0.0-beta.4",
-    "@web3-react/core": "^6.0.2",
-    "@web3-react/fortmatic-connector": "^6.0.2",
-    "@web3-react/injected-connector": "^6.0.3",
-    "@web3-react/network-connector": "^6.0.4",
-    "@web3-react/portis-connector": "^6.0.2",
-    "@web3-react/torus-connector": "^6.0.8",
-    "@web3-react/walletconnect-connector": "^6.0.2",
-    "@web3-react/walletlink-connector": "^6.0.2",
+    "@babel/helper-call-delegate": "^7.12.13",
+    "@reach/dialog": "^0.14.0",
+    "@reach/tooltip": "^0.14.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@uniswap/sdk": "^3.0.3",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/fortmatic-connector": "^6.1.6",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/network-connector": "^6.1.9",
+    "@web3-react/portis-connector": "^6.1.9",
+    "@web3-react/torus-connector": "^6.1.9",
+    "@web3-react/walletconnect-connector": "^6.1.9",
+    "@web3-react/walletlink-connector": "^6.1.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
-    "copy-to-clipboard": "^3.2.0",
-    "escape-string-regexp": "^2.0.0",
-    "eslint": "^6.6.0",
+    "copy-to-clipboard": "^3.3.1",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^7.23.0",
     "ethereumjs-utils": "^5.2.5",
-    "ethers": "^4.0.44",
-    "graphql-tag": "^2.10.3",
-    "history": "^4.9.0",
-    "i18next": "^15.0.9",
-    "i18next-browser-languagedetector": "^3.0.1",
-    "i18next-xhr-backend": "^2.0.1",
+    "ethers": "^5.1.0",
+    "graphql-tag": "^2.11.0",
+    "history": "^5.0.0",
+    "i18next": "^20.1.0",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-xhr-backend": "^3.2.2",
     "jazzicon": "^1.5.0",
-    "polished": "^3.3.2",
-    "qrcode.react": "^0.9.3",
-    "react": "^16.8.6",
-    "react-device-detect": "^1.6.2",
-    "react-dom": "^16.8.6",
-    "react-feather": "^1.1.6",
-    "react-ga": "^2.5.7",
-    "react-i18next": "^10.7.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
-    "react-spring": "^8.0.27",
-    "react-switch": "^5.0.1",
-    "react-use-gesture": "^6.0.14",
-    "styled-components": "^4.2.0",
-    "typescript": "^3.8.2",
+    "polished": "^4.1.1",
+    "qrcode.react": "^1.0.1",
+    "react": "^17.0.2",
+    "react-device-detect": "^1.17.0",
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
+    "react-ga": "^3.3.0",
+    "react-i18next": "^11.8.12",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-spring": "^9.0.0",
+    "react-switch": "^6.0.0",
+    "react-use-gesture": "^9.1.3",
+    "styled-components": "^5.2.3",
+    "typescript": "^4.2.3",
     "use-media": "^1.4.0"
   },
   "scripts": {
@@ -82,6 +82,6 @@
   },
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "prettier": "^1.17.0"
+    "prettier": "^2.2.1"
   }
 }
