--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "api:deploy": "yarn workspace api deploy",
     "api:dev": "yarn workspace api start",
-    "api:start": "yarn workspace api start",
+    "api:start": "./start_api.sh",
     "api:build": "yarn workspace api build",
     "api:lint": "yarn workspace api deploy",
     "api:test": "yarn workspace api test",
