--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -1,9 +1,25 @@
-export ENVIRONMENT=development
-export DYNAMODB_TABLE=maker-badges
-export AWS_PROFILE=
+#!/usr/bin/env bash
+
+export APP_PORT=3333
+export LOG_LEVEL='debug'
+
+# Beta MKR GraphQL
 export MAKER_URL=
 export MAKER_USER=
 export MAKER_PW=
-export DISCOURSE_BADGES_API=
+
+# Staging Forum
 export DISCOURSE_API_USERNAME=
+export DISCOURSE_BADGES_API=
 export DISCOURSE_FORUM_URL=
+export DISCOURSE_USER_BADGES_URL=
+
+export NGROK_AUTH=
+export NGROK_HOSTNAME=
+
+# AWS CONFIG
+export AWS_PROFILE=local
+export ENVIRONMENT=local
+export DYNAMODB_TABLE=maker-badges
+export AWS_ACCESS_KEY_ID=
+export AWS_SECRET_ACCESS_KEY=
